fixed fonts and title spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 *
 {
     box-sizing: border-box;
-    font-family: 'Prata', serif;
+    font-family: 'Lato', sans-serif;
 }
 
 .navbar {
@@ -14,6 +14,7 @@
 
 .navbar-brand {
     color: palegoldenrod;
+    font-family: 'Prata', serif;
 }
 
 .leftSide, .rightSide {
@@ -37,7 +38,6 @@
 .rightSide {
     background-color: #cdd2e3;
     color: #383835;
-    font-family: 'Prata', serif;
 }
 
 .name {
@@ -45,10 +45,12 @@
     border-top: 5px solid white;
     border-bottom: 5px solid white;
     color: black;
+    font-family: 'Prata', serif;
 }
 
 .rightSide, .title {
     font-size: 30px;
+    font-family: 'Prata', serif;
 }
 
 .aboutMe {
@@ -59,11 +61,16 @@
 
 #aboutMeHeader {
     padding: 20px;
+    font-family: 'Prata', serif;
+}
+
+#appsHeader {
+    font-family: 'Prata', serif;
 }
 
 .sectionHeader {
     margin: 33px;
-
+    font-family: 'Prata', serif;
 }
 
 .proPic {
@@ -73,10 +80,6 @@
 
 .description {
     font-size: 19px;
-}
-
-#portfolioHeader {
-    margin-top: 20px;
 }
 
 .projects {
@@ -95,8 +98,14 @@
     padding: 10px;
 }
 
+#skillsHeader {
+    font-family: 'Prata', serif;
+    padding-top: 5px;
+    padding: 30px;
+}
+
 i {
-    padding: 10px;
+    padding: 12px;
 }
 
 .contact {
@@ -104,9 +113,17 @@ i {
     color: black;
 }
 
+#contactHeader {
+    font-family: 'Prata', serif;
+    padding-top: 35px;
+    padding-bottom: 10px;
+}
+
 .footer {
     background-color:#333132;
     color: white;
+    font-family: 'Prata', serif;
+
 }
 
 .logo {
